--- a/picom.conf
+++ b/picom.conf
@@ -2,7 +2,7 @@
 #          Animations           #
 #################################
 
-animations: true;
+animations = true
 animation-stiffness = 300
 animation-window-mass = 1
 animation-delta = 10
@@ -11,23 +11,22 @@ animation-force-steps = 10
 
 animation-clamping = false
 
-animation-for-open-window = "zoom"; #open window
-animation-for-unmap-window = "zoom"; #minimize window
-animation-for-workspace-switch-in = "zoom"; #the windows in the workspace that is coming in
-animation-for-workspace-switch-out = "zoom"; #the windows in the workspace that are coming out
-animation-for-transient-window = "zoom"; #popup windows
-
+animation-for-open-window = "auto" # open window
+animation-for-unmap-window = "auto" # minimize window
+animation-for-workspace-switch-in = "auto" # the windows in the workspace that is coming in
+animation-for-workspace-switch-out = "auto" #the windows in the workspace that are coming out
+animation-for-transient-window = "auto" # popup windows
 
 #################################
 #             Shadows           #
 #################################
 
-shadow = false;
-shadow-radius = 0;
-shadow-opacity = .50
-shadow-offset-x = -25;
-shadow-offset-y = -25;
-dock-shadow = true;
+shadow = true
+shadow-radius = 10
+shadow-opacity = .2
+shadow-offset-x = 1
+shadow-offset-y = 1
+dock-shadow = false
 
 shadow-exclude = [
   "window_type = 'menu'",
@@ -39,37 +38,21 @@ shadow-exclude = [
   "class_g = 'eww-visualizer'",
   "class_g = 'eww-lyrics'",
   "class_g = 'eww-volume-indicator'",
-  "class_g = 'eww-brightness-indicator'"
-];
+  "class_g = 'eww-brightness-indicator'",
+  "! name~=''"  # exclude windows with no name such as qtile's bar
+]
 
 #################################
 #           Fading              #
 #################################
 
 
-# Fade windows in/out when opening/closing and when opacity changes,
-#  unless no-fading-openclose is used.
-# fading = false;
-fading = false;
-
-# Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
-# fade-in-step = 0.028
-fade-in-step = 0.03;
-
-# Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
-# fade-out-step = 0.03
-fade-out-step = 0.03;
-
-# The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
+fading = false
+fade-in-step = 0.03
+fade-out-step = 0.03
 fade-delta = 4
-
-# Specify a list of conditions of windows that should not be faded.
 # fade-exclude = []
-
-# Do not fade on window open/close.
 # no-fading-openclose = false
-
-# Do not fade destroyed ARGB windows with WM frame. Workaround of bugs in Openbox, Fluxbox, etc.
 # no-fading-destroyed-argb = false
 
 
@@ -77,25 +60,20 @@ fade-delta = 4
 #   Transparency / Opacity      #
 #################################
 
-# active-opacity = 1.0
-# inactive-opacity = 1.0;
-# inactive-dim = 0.0
+active-opacity = 1.0
+inactive-opacity = 1.0
+inactive-dim = 0.0
 
-# frame-opacity = 1.0;
+frame-opacity = 1.0
 
-# inactive-opacity-override = 1.0;
-# inactive-dim-fixed = true;
+inactive-opacity-override = 1.0
+inactive-dim-fixed = true
 
-focus-exclude = [];
+focus-exclude = []
 opacity-rule = [
-    "80:class_g = 'Alacritty'",
-    # "80:name *= 'code'",
+    "50:class_g = 'kitty'",
     "100:class_g = 'discord' && focused",
     "95:class_g = 'discord' && !focused",
-    # "90:class_g = 'dmenu' && focused",
-    # "85:class_g = 'dmenu' && !focused",
-    "85:class_g = 'Thunar' && focused",
-    "80:class_g = 'Thunar' && !focused",
     "90:class_g = 'Spotify' && focused",
     "85:class_g = 'Spotify' && !focused",
     "92:class_g = 'Rofi'",
@@ -113,25 +91,12 @@ opacity-rule = [
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 8;
+corner-radius = 8
 
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
-  "class_g = 'dmenu'",
-  "window_type = 'dock'",
-  "window_type = 'desktop'",
-  "window_type = 'tooltip'",
-  "class_g = 'shutter'",
-  "class_g = 'eww-*'",
-  "class_g = 'activate-linux'",
-  "class_g = 'escrotum'",
-  "class_g = 'Peek'",
-  "_GTK_FRAME_EXTENTS@:c",
-  "class_g = 'Bar'",
-  "class_g = 'eww-background-closer'",
   "! name~=''"  # exclude windows with no name such as qtile's bar
-#  "class_g = 'GLava'",
-];
+]
 
 #################################
 #     Background-Blurring       #
@@ -148,7 +113,7 @@ blur-deviation = 5
 #    blur-background
 # Bad in performance, with driver-dependent behavior. The name may change.
 #
-# blur-background-frame = true
+blur-background-frame = false
 
 
 # Use fixed blur strength rather than adjusting according to window opacity.
@@ -157,26 +122,24 @@ blur-background-fixed = true
 
 # Specify the blur convolution kernel, with the following format:
 # example:
-#   blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
+#   blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1"
 #
 # blur-kern = ""
-# blur-kern = "3x3box";
+# blur-kern = "3x3box"
 
 
 # Exclude conditions for background blur.
-# blur-background-exclude = []
 blur-background-exclude = [
   "window_type = 'menu'",
   "_GTK_FRAME_EXTENTS@:c",
   "class_g ~= '^((?!eww-powermenu).)eww-*$'",
   "class_g = 'activate-linux'",
-  "class_g = 'escrotum'",
   "class_g = 'Peek'",
   "class_g = 'Tint2'",
   "class_g = 'Slop'",
   "class_g = 'slop'",
   "class_g = 'conky'"
-];
+]
 
 #################################
 #       General Settings        #
@@ -190,37 +153,26 @@ blur-background-exclude = [
 
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
-#
-# backend = "glx"
-backend = "glx";
+backend = "glx"
 
 # Enable/disable VSync.
-vsync = false;
-
-# Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
-# dbus = false
+vsync = true
 
 # Try to detect WM windows (a non-override-redirect window with no
 # child that has 'WM_STATE') and mark them as active.
-#
-# mark-wmwin-focused = false
-mark-wmwin-focused = true;
+mark-wmwin-focused = true
 
 # Mark override-redirect windows that doesn't have a child window with 'WM_STATE' focused.
 # mark-ovredir-focused = false
-mark-ovredir-focused = true;
+mark-ovredir-focused = true
 
 # Try to detect windows with rounded corners and don't consider them
 # shaped windows. The accuracy is not very high, unfortunately.
-#
-detect-rounded-corners = false
-# detect-rounded-corners = true;
+detect-rounded-corners = true
 
 # Detect '_NET_WM_WINDOW_OPACITY' on client windows, useful for window managers
 # not passing '_NET_WM_WINDOW_OPACITY' of client windows to frame windows.
-#
-# detect-client-opacity = false
-detect-client-opacity = true;
+detect-client-opacity = true
 
 # Use EWMH '_NET_ACTIVE_WINDOW' to determine currently focused window,
 # rather than listening to 'FocusIn'/'FocusOut' event. Might have more accuracy,
@@ -242,9 +194,7 @@ detect-client-opacity = true;
 
 # Use 'WM_TRANSIENT_FOR' to group windows, and consider windows
 # in the same group focused at the same time.
-#
-# detect-transient = false
-detect-transient = true;
+detect-transient = true
 
 # Use 'WM_CLIENT_LEADER' to group windows, and consider windows in the same
 # group focused at the same time. This usually means windows from the same application
@@ -289,9 +239,7 @@ glx-no-stencil = true
 # This cause the whole screen to be redrawn everytime, instead of the part of the screen
 # has actually changed. Potentially degrades the performance, but might fix some artifacts.
 # The opposing option is use-damage
-#
-# no-use-damage = false
-use-damage = true;
+use-damage = false
 
 # Use X Sync fence to sync clients' draw calls, to make sure all draw
 # calls are finished before picom starts drawing. Needed on nvidia-drivers
@@ -324,7 +272,6 @@ use-damage = true;
 
 # Make transparent windows clip other windows like non-transparent windows do,
 # instead of blending on top of them.
-#
 transparent-clipping = false
 
 # Set the log level. Possible values are:
@@ -332,9 +279,7 @@ transparent-clipping = false
 # in increasing level of importance. Case doesn't matter.
 # If using the "TRACE" log level, it's better to log into a file
 # using *--log-file*, since it can generate a huge stream of logs.
-#
-# log-level = "debug"
-log-level = "warn";
+log-level = "warn"
 
 # Set the log file.
 # If *--log-file* is never specified, logs will be written to stderr.
@@ -386,9 +331,9 @@ log-level = "warn";
 #
 wintypes:
 {
-  tooltip = { fade = true; shadow = false; opacity = 1.0; focus = true; full-shadow = false; };
-  dock = { shadow = true; }
-  dnd = { shadow = true; }
-  popup_menu = { opacity = 1.0; }
-  dropdown_menu = { opacity = 1.0; }
-};
+  tooltip = { fade = true shadow = false opacity = 1.0 focus = true full-shadow = false }
+  dock = { shadow = true }
+  dnd = { shadow = true }
+  popup_menu = { opacity = 1.0 }
+  dropdown_menu = { opacity = 1.0 }
+}
