--- a/picom.conf
+++ b/picom.conf
@@ -11,17 +11,19 @@ animation-force-steps = 10
 
 animation-clamping = false
 
-animation-for-open-window = "auto" # open window
-animation-for-unmap-window = "auto" # minimize window
-animation-for-workspace-switch-in = "auto" # the windows in the workspace that is coming in
-animation-for-workspace-switch-out = "auto" #the windows in the workspace that are coming out
-animation-for-transient-window = "auto" # popup windows
+# Must be one of `none`, `fly-in`, `zoom`,
+# `slide-down`, `slide-up`, `slide-left`, `slide-right`
+animation-for-open-window = "zoom" # open window
+animation-for-unmap-window = "zoom" # minimize window
+animation-for-workspace-switch-in = "zoom" # the windows in the workspace that is coming in
+animation-for-workspace-switch-out = "zoom" #the windows in the workspace that are coming out
+animation-for-transient-window = "zoom" # popup windows
 
 #################################
 #             Shadows           #
 #################################
 
-shadow = true
+shadow = false
 shadow-radius = 10
 shadow-opacity = .2
 shadow-offset-x = 1
@@ -29,7 +31,6 @@ shadow-offset-y = 1
 dock-shadow = false
 
 shadow-exclude = [
-  "window_type = 'menu'",
   "class_g = 'Plank'",
   "class_g = 'Cairo-dock'",
   "class_g = 'activate-linux'",
@@ -71,7 +72,7 @@ inactive-dim-fixed = true
 
 focus-exclude = []
 opacity-rule = [
-    "50:class_g = 'kitty'",
+    "70:class_g = 'kitty'",
     "100:class_g = 'discord' && focused",
     "95:class_g = 'discord' && !focused",
     "90:class_g = 'Spotify' && focused",
@@ -156,7 +157,7 @@ blur-background-exclude = [
 backend = "glx"
 
 # Enable/disable VSync.
-vsync = true
+vsync = false
 
 # Try to detect WM windows (a non-override-redirect window with no
 # child that has 'WM_STATE') and mark them as active.
@@ -194,7 +195,7 @@ detect-client-opacity = true
 
 # Use 'WM_TRANSIENT_FOR' to group windows, and consider windows
 # in the same group focused at the same time.
-detect-transient = true
+detect-transient = false
 
 # Use 'WM_CLIENT_LEADER' to group windows, and consider windows in the same
 # group focused at the same time. This usually means windows from the same application
@@ -239,7 +240,7 @@ glx-no-stencil = true
 # This cause the whole screen to be redrawn everytime, instead of the part of the screen
 # has actually changed. Potentially degrades the performance, but might fix some artifacts.
 # The opposing option is use-damage
-use-damage = false
+use-damage = true
 
 # Use X Sync fence to sync clients' draw calls, to make sure all draw
 # calls are finished before picom starts drawing. Needed on nvidia-drivers
@@ -331,9 +332,24 @@ log-level = "warn"
 #
 wintypes:
 {
-  tooltip = { fade = true shadow = false opacity = 1.0 focus = true full-shadow = false }
-  dock = { shadow = true }
-  dnd = { shadow = true }
-  popup_menu = { opacity = 1.0 }
+  # tooltip = { fade = true shadow = false opacity = 1.0 focus = true full-shadow = false }
+  # dock = { shadow = true clip-shadow-above=true }
+  # dnd = { shadow = true }
+  # popup_menu = { opacity = 1.0 }
+  # dropdown_menu = { opacity = 1.0 }
+  unknown = { opacity = 1.0 clip-shadow-above = true }
+  desktop = { opacity = 1.0 clip-shadow-above = true }
+  dock = { opacity = 1.0 clip-shadow-above = true }
+  toolbar = { opacity = 1.0 clip-shadow-above = true }
+  menu = { opacity = 1.0 clip-shadow-above = true animation=false }
+  utility = { opacity = 1.0 clip-shadow-above = true }
+  splash = { opacity = 1.0 clip-shadow-above = true }
+  dialog = { opacity = 1.0 clip-shadow-above = true }
+  normal = { opacity = 1.0 clip-shadow-above = false shadow=true }
   dropdown_menu = { opacity = 1.0 }
+  popup_menu = { opacity = 1.0 }
+  tooltip = { opacity = 1.0 }
+  notification = { opacity = 1.0 }
+  combo = { opacity = 1.0 }
+  dnd = { opacity = 1.0 }
 }
